--- a/Buptis/Buptis.csproj
+++ b/Buptis/Buptis.csproj
@@ -32,9 +32,13 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AndroidUseSharedRuntime>True</AndroidUseSharedRuntime>
+    <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
     <AndroidLinkMode>None</AndroidLinkMode>
-    <EmbedAssembliesIntoApk>False</EmbedAssembliesIntoApk>
+    <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
+    <AotAssemblies>false</AotAssemblies>
+    <EnableLLVM>false</EnableLLVM>
+    <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
+    <BundleAssemblies>false</BundleAssemblies>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>PdbOnly</DebugType>
@@ -51,7 +55,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DK.Ostebaronen.Droid.ViewPagerIndicator">
-      <HintPath>..\..\..\..\DLL\Android\DK.Ostebaronen.Droid.ViewPagerIndicator.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Desktop\dll\DK.Ostebaronen.Droid.ViewPagerIndicator.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Android.Export" />
     <Reference Include="System" />
@@ -94,6 +98,7 @@
     <Compile Include="LokasyondakiKisiler\Tumu\GaleriRecyclerviewAdepter.cs" />
     <Compile Include="LokasyondakiKisiler\Tumu\GaleriRecyclerViewDataModel.cs" />
     <Compile Include="LokasyondakiKisiler\Tumu\TumuBaseFragment.cs" />
+    <Compile Include="LokasyonDetay\LokasyonDetayFragment.cs" />
     <Compile Include="LokasyonDetay\LokayonDetayBaseActivity.cs" />
     <Compile Include="Lokasyonlar\BanaYakin\BanaYakinBaseFragment.cs" />
     <Compile Include="Lokasyonlar\BanaYakin\BanaYakinRecyclerviewAdepter.cs" />
@@ -182,6 +187,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.v7.CardView">
       <Version>28.0.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>1.3.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading">
       <Version>2.4.11.982</Version>
@@ -373,7 +381,9 @@
     <AndroidResource Include="Resources\mipmap-xhdpi\yildiz1.png" />
     <AndroidResource Include="Resources\values\Integers.xml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\LokasyonDetayFragment.axml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
     Other similar extension points exist, see Microsoft.Common.targets.
