--- a/Buptis/Buptis.csproj
+++ b/Buptis/Buptis.csproj
@@ -57,7 +57,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DK.Ostebaronen.Droid.ViewPagerIndicator">
-      <HintPath>..\..\..\..\..\..\Desktop\android_dll\DK.Ostebaronen.Droid.ViewPagerIndicator.dll</HintPath>
+      <HintPath>..\..\..\..\..\DLL\Android\DK.Ostebaronen.Droid.ViewPagerIndicator.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Android.Export" />
     <Reference Include="System" />
@@ -74,6 +74,7 @@
     <Compile Include="GenericClass\DinamikStatusBarColor.cs" />
     <Compile Include="GenericClass\DPX.cs" />
     <Compile Include="GenericClass\ExtMethods.cs" />
+    <Compile Include="GenericClass\FontHelper.cs" />
     <Compile Include="GenericClass\GeoCodeJSONClass.cs" />
     <Compile Include="GenericClass\GoogleMapPlaceClass.cs" />
     <Compile Include="GenericClass\MapUtils.cs" />
@@ -151,6 +152,9 @@
     <Compile Include="WebServicee\WebService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\Fonts\muliBold.ttf" />
+    <AndroidAsset Include="Assets\Fonts\muliItalic.ttf" />
+    <AndroidAsset Include="Assets\Fonts\muliRegular.ttf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Properties\AndroidManifest.xml" />
     <None Include="Assets\AboutAssets.txt" />
