--- a/Buptis/Buptis.csproj
+++ b/Buptis/Buptis.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Compile Include="DataBasee\DataBase.cs" />
     <Compile Include="DataBasee\DataModel.cs" />
+    <Compile Include="GenericClass\AuthenticationState.cs" />
     <Compile Include="GenericClass\BitmapHelpers.cs" />
     <Compile Include="GenericClass\CustomLoadingViewHelper.cs" />
     <Compile Include="GenericClass\DinamikStatusBarColor.cs" />
@@ -80,6 +81,7 @@
     <Compile Include="GenericClass\MapUtils.cs" />
     <Compile Include="GenericClass\Saat_Secim.cs" />
     <Compile Include="GenericClass\ScaleImageView.cs" />
+    <Compile Include="GenericClass\SosyalLoginHelper.cs" />
     <Compile Include="GenericClass\TabPagerAdaptor.cs" />
     <Compile Include="GenericClass\Tarih_Cek.cs" />
     <Compile Include="GenericClass\ViewPagerStoryAnimation.cs" />
@@ -193,6 +195,9 @@
     <PackageReference Include="Xamarin.Android.Support.v7.CardView">
       <Version>28.0.0.1</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Auth">
+      <Version>1.7.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.3.0</Version>
     </PackageReference>
@@ -201,6 +206,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Transformations">
       <Version>2.4.11.982</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.GooglePlayServices.Auth">
+      <Version>71.1600.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.GooglePlayServices.Base">
       <Version>71.1610.0</Version>
