--- a/Buptis/Buptis.csproj
+++ b/Buptis/Buptis.csproj
@@ -219,6 +219,9 @@
     <PackageReference Include="Xamarin.GooglePlayServices.Maps">
       <Version>71.1610.0</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Plugin.ImageEdit">
+      <Version>1.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.RangeSlider">
       <Version>1.0.2</Version>
     </PackageReference>
