--- a/Buptis/Buptis.csproj
+++ b/Buptis/Buptis.csproj
@@ -443,6 +443,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\mipmap-xhdpi\send_icon2.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\mipmap-xhdpi\close_editing_icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
     Other similar extension points exist, see Microsoft.Common.targets.
