--- a/Buptis/Buptis.csproj
+++ b/Buptis/Buptis.csproj
@@ -57,7 +57,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DK.Ostebaronen.Droid.ViewPagerIndicator">
-      <HintPath>..\..\..\..\..\..\Desktop\android_dll\DK.Ostebaronen.Droid.ViewPagerIndicator.dll</HintPath>
+      <HintPath>..\..\..\..\DLL\Android\DK.Ostebaronen.Droid.ViewPagerIndicator.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Android.Export" />
     <Reference Include="System" />
@@ -409,7 +409,7 @@
     <AndroidResource Include="Resources\drawable\circular_progress_bar.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\circle_shape.xml.xml" />
+    <AndroidResource Include="Resources\drawable\circle_shape.xml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\PrivateProfileEngelliListesi.axml">
