--- a/Buptis/Properties/AndroidManifest.xml
+++ b/Buptis/Properties/AndroidManifest.xml
@@ -9,7 +9,7 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.CALL_PHONE" />
 	<uses-permission android:name="android.permission.USE_CREDENTIALS" />
-	<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
+	<application android:allowBackup="true" android:icon="@drawable/radiounselect" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
 		<uses-library android:name="org.apache.http.legacy" android:required="false" />
 		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="@string/GoogleKey" />
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
