--- a/Buptis/Buptis.csproj
+++ b/Buptis/Buptis.csproj
@@ -57,7 +57,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DK.Ostebaronen.Droid.ViewPagerIndicator">
-      <HintPath>C:\Users\Meryem Şahin\Desktop\android_dll\DK.Ostebaronen.Droid.ViewPagerIndicator.dll</HintPath>
+      <HintPath>..\..\..\..\DLL\Android\DK.Ostebaronen.Droid.ViewPagerIndicator.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Android.Export" />
     <Reference Include="System" />
