--- a/Buptis/Buptis.csproj
+++ b/Buptis/Buptis.csproj
@@ -184,6 +184,9 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_launcher_round.png" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Naxam.ViewPagerIndicator.Droid">
+      <Version>2.4.1</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.2</Version>
     </PackageReference>
