--- a/Buptis/Buptis.csproj
+++ b/Buptis/Buptis.csproj
@@ -70,6 +70,9 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Mono.Android" />
+    <Reference Include="Xamarin.InAppBilling">
+      <HintPath>..\..\..\..\DLL\Android\Xamarin.InAppBilling.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BackgroundServices\BuptisMessageListener.cs" />
@@ -90,6 +93,7 @@
     <Compile Include="GenericClass\SosyalLoginHelper.cs" />
     <Compile Include="GenericClass\TabPagerAdaptor.cs" />
     <Compile Include="GenericClass\Tarih_Cek.cs" />
+    <Compile Include="GenericClass\UygulamaIciSatinAlmaService.cs" />
     <Compile Include="GenericClass\ViewPagerStoryAnimation.cs" />
     <Compile Include="GenericClass\XamarinRecyclerViewOnScrollListener.cs" />
     <Compile Include="GenericUI\AlertHelper.cs" />
@@ -161,6 +165,7 @@
     <Compile Include="PublicProfile\PublicProfileDataModel.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SatinAlmaTest.cs" />
     <Compile Include="Splashh\Splash.cs" />
     <Compile Include="WebServicee\WebService.cs" />
   </ItemGroup>
@@ -195,9 +200,6 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.2</Version>
-    </PackageReference>
-    <PackageReference Include="Plugin.InAppBilling">
-      <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.5.231</Version>
@@ -665,6 +667,11 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\mipmap-xhdpi\mapmarkerr1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\SatinAlTest.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
